# data_driven_engineering

./: .gitignore  README.md  df.csv  pyproject.toml
api_example/: README.md  api_reader.py
notebooks/: EDA.ipynb
parse_example/: README.md
src/etl/: extract.py  load.py  main.py  transform.py
src/experiments/: data_loader.py  write_to_db.py
src/experiments/api_example/: api_reader.py
src/experiments/parse_example/: data_parser.py
src/my_project/: data_loader.py
