[project]
name = "my-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Margarita",email = "kadochnikova.ritulya@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab (>=4.4.7,<5.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "wget (>=3.2,<4.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "certifi (>=2025.10.5,<2026.0.0)",
    "pandera (>=0.26.1,<0.27.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry]
packages = [{include = "my_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)"
]
